WiP editorholder getting closer to usable. fixed resize event handling, background layer obscuring tabs, background layer overflow, tab margin resets

--- a/code-pwa/css/main.css
+++ b/code-pwa/css/main.css
@@ -586,7 +586,7 @@ ui-tabbar.show-split-view-indicator::after {
 
 .background-element {
     position: absolute;
-    top: 0;
+    top: var(--tabHeight);
     left: 0;
     width: 100%;
     height: 100%;
@@ -596,6 +596,7 @@ ui-tabbar.show-split-view-indicator::after {
     justify-content: center;
     align-items: center;
     text-align: center;
+    overflow: hidden;
 }
 
 .background-element img {
